# SnakeGame

./: CMakeLists.txt  README.md
sdl/: CApp.cpp
snakegame/: controller.cpp  controller.h  renderer.cpp  renderer.h  snake.cpp  snake.h
